samples/_failures_safe/1761484106_2e07e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8377984d.c: In function ‘main’:
./samples/SAFE/__tmp_8377984d.c:179:20: error: missing terminating " character
  179 |             printf("
      |                    ^
./samples/SAFE/__tmp_8377984d.c:179:13: error: expected expression at end of input
  179 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_8377984d.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8377984d.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8377984d.c:179:13: error: expected declaration or statement at end of input
